# mirte_playground

./: .buildinfo  Dockerfile  README.md  contact.html  dependencies.repos  docker.html  genindex.html  index.html  mirte_pddl.html  mirte_rebet.html  mirte_setup.html  objects.inv  search.html  searchindex.js
.doctrees/: contact.doctree  docker.doctree  environment.pickle  index.doctree  mirte_pddl.doctree  mirte_rebet.doctree  mirte_setup.doctree
.doctrees/2025/: index.doctree  old_index.doctree
.doctrees/2025/day1/: docker.doctree  index.doctree  intro-ros2.doctree  mirte-master-ros2.doctree  mirte-master-setup.doctree  mirte_setup.doctree
.doctrees/2025/day2/: index.doctree  mirte_pddl.doctree  (+4 more)
.doctrees/20XX/: index.doctree
.github/workflows/: doc.yml
2025/: index.html  old_index.html
2025/day1/: docker.html  index.html  intro-ros2.html  mirte-master-ros2.html  mirte-master-setup.html  mirte_setup.html
2025/day2/: cognitive-architectures-for-robotics.html  index.html  mirte_pddl.html  pddl-for-robotics.html  pddl-with-mirte.html  planning-domain-definition-language.html
2025/day3/: applied-self-adaptation.html  index.html  mirte_rebet.html  model-based-system-architecture.html  self-adaptation-in-robotics.html  software-and-systems-design-process.html
2025/day4/: hands-on.html  index.html  introduction-to-model-checking-methods.html  introduction-to-v-v-and-formal-methods.html  model-checking-in-industry-and-the-convince-project.html  software-engineering-for-reliable-robots.html
2025/day5/: democratizing-the-use-of-robots.html  how-to-study-future-human-robot-interaction.html  index.html  mirte-playtime.html
20XX/: index.html
20XX/dayX/: index.html  some-practical.html  some-presentation.html
_sources/: docker.md.txt  index.rst.txt  mirte_pddl.md.txt  mirte_rebet.md.txt  mirte_setup.md.txt
_sources/2025/: old_index.rst.txt
docs/: .codespell-dictionary  .codespell-ignore  .codespellrc  requirements.txt
docs/source/: conf.py  contact.rst  docker.md  index.rst  mirte_pddl.md  mirte_rebet.md  mirte_setup.md
mirte_pddl/: CMakeLists.txt  README.md  package.xml
mirte_pddl/config/: plansys2_params.yaml  waypoints.yml
mirte_pddl/include/mirte_pddl/: action_move.hpp  mirte_planner.hpp
mirte_pddl/launch/: mirte_pddl.launch.py
mirte_pddl/pddl/: domain.pddl  problem.pddl
mirte_pddl/src/: action_move.cpp  mirte_planner.cpp
(+75 files in other folders)
