<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>mirte_pddl</name>
  <version>0.0.0</version>
  <description>PDDL package for the real mirte</description>

  <maintainer email="g.rezendesilva@tudelft.nl">Rezenders</maintainer>
  <author email="g.rezendesilva@tudelft.nl">Gustavo Rezende</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>plansys2_domain_expert</depend>
  <depend>plansys2_problem_expert</depend>
  <depend>plansys2_executor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
